修改词云图静态文件cdn

--- a/apps/tool/templates/tool/word_cloud.html
+++ b/apps/tool/templates/tool/word_cloud.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="正则表达式,Python正则表达式,Regular Expression,在线工具">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <script src="https://code.hcharts.cn/10.3.2/highcharts.js"></script>
-<script src="https://code.hcharts.cn/10.3.2/highcharts-more.js"></script>
+<script src="https://code.hcharts.cn/10.3.2/modules/exporting.js"></script>
 <script src="https://code.hcharts.cn/10.3.2/modules/wordcloud.js"></script>
 <script src="https://code.hcharts.cn/10.3.2/modules/oldie.js"></script>
 <script src="https://code.hcharts.cn/10.3.2/themes/dark-unica.js"></script>
