--- a/apps/tool/templates/tool/tags/tool_list.html
+++ b/apps/tool/templates/tool/tags/tool_list.html
@@ -24,7 +24,7 @@
 {% for each_cate in cates %}
 <div class="card border-0 rounded-0 px-3 mb-2 mb-md-3 tool-cate">
     <div class="card-header bg-white px-0">
-        <strong><i class="fa fa-link mr-2 f-17"></i>{{ each_cate.name }}</strong>
+        <strong><i class="{{ each_cate.icon }} mr-2 f-17"></i>{{ each_cate.name }}</strong>
     </div>
     <div class="card-body px-0 py-3">
         <div class="tool-list">
