添加个人所得税综合所得年度汇算工具

--- a/apps/tool/templates/tool/tax.html
+++ b/apps/tool/templates/tool/tax.html
@@ -21,32 +21,32 @@
         </ul>
     </div>
     <div class="input-group mb-3">
-        <div class="input-group-prepend"><span class="input-group-text">收入合计</span></div>
+        <div class="input-group-prepend"><span class="input-group-text  f-16">收入合计</span></div>
         <input type="number" step="0.01" class="form-control" id="income">
-        <div class="input-group-append"><span class="input-group-text">.00</span></div>
+        <div class="input-group-append"><span class="input-group-text f-16">.00</span></div>
     </div>
     <div class="input-group mb-3">
-        <div class="input-group-prepend"><span class="input-group-text">已申报税额合计</span></div>
+        <div class="input-group-prepend"><span class="input-group-text  f-16">已申报税额合计</span></div>
         <input type="number" step="0.01" class="form-control" id="old_tax">
-        <div class="input-group-append"><span class="input-group-text">.00</span></div>
+        <div class="input-group-append"><span class="input-group-text f-16">.00</span></div>
     </div>
     <div class="input-group mb-3">
-        <div class="input-group-prepend"><span class="input-group-text">专项扣除合计</span></div>
+        <div class="input-group-prepend"><span class="input-group-text f-16">专项扣除合计</span></div>
         <input type="number" step="0.01" class="form-control" id="special_deduction">
-        <div class="input-group-append"><span class="input-group-text">.00</span></div>
+        <div class="input-group-append"><span class="input-group-text f-16">.00</span></div>
     </div>
     <div class="input-group mb-3">
-        <div class="input-group-prepend"><span class="input-group-text">专项附加扣除合计</span></div>
+        <div class="input-group-prepend"><span class="input-group-text f-16">专项附加扣除合计</span></div>
         <input type="number" step="0.01" class="form-control" id="special_add_deduction">
-        <div class="input-group-append"><span class="input-group-text">.00</span></div>
+        <div class="input-group-append"><span class="input-group-text f-16">.00</span></div>
     </div>
     <div class="input-group mb-3">
-        <div class="input-group-prepend"><span class="input-group-text">全年一次性奖金收入</span></div>
+        <div class="input-group-prepend"><span class="input-group-text f-16">全年一次性奖金收入</span></div>
         <input type="number" step="0.01" class="form-control" id="annual_bonus">
-        <div class="input-group-append"><span class="input-group-text">.00</span></div>
+        <div class="input-group-append"><span class="input-group-text f-16">.00</span></div>
     </div>
     <div class="mb-3">
-        <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-tax">开始计算</button>
+        <button type="submit" class="btn btn-info btn-sm rounded-0  f-16" id="start-tax">开始计算</button>
     </div>
 {% endblock %}
 
