静态资源用cdn

--- a/apps/tool/templates/tool/json2go.html
+++ b/apps/tool/templates/tool/json2go.html
@@ -84,12 +84,12 @@
         </tr>
     </table>
 
-
+</div>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="{% static 'tool/js/json2go/highlight.min.js' %}"></script>
     <script src="{% static 'tool/js/json2go/json-to-go.js' %}"></script>
     <script src="{% static 'tool/js/json2go/common.js' %}"></script>
-    <script src="{% static 'tool/js/json2go/gofmt.js' %}"></script>
+    <script src="http://pic.tendcode.com/static/gofmt.js"></script>
     {% load_github_corners "blue" "https://github.com/mholt/json-to-go" %}
 </body>
 </html>
