--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -1,9 +1,11 @@
 .f-17 {
     font-size: 15px;
 }
+
 .nowpage .breadcrumb {
-    background-color:transparent;
+    background-color: transparent;
 }
+
 .article-body img {
     display: block;
     max-width: 100%;
@@ -11,76 +13,102 @@
     margin-right: auto;
     margin-left: auto;
 }
+
 .article-body img:hover {
-    cursor:pointer;
+    cursor: pointer;
 }
-.article-body h2{
-    font-weight:600;
+
+.article-body h2 {
+    font-weight: 600;
     margin: 10px 0 10px 0;
     padding: 0 10px;
     border-left: 5px solid #20c997;
     background-color: #f7f7f7;
     line-height: 2em;
 }
+
 .article-body h3 {
-    font-weight:600;
+    font-weight: 600;
 }
+
 .article-body p {
-    margin-bottom:1em;
+    margin-bottom: 1em;
 }
+
 .article-body ul,
 .article-body ol {
-    padding-left:2.2em;
+    padding-left: 2.2em;
 }
+
 .article-body table {
     width: 100%;
     max-width: 100%;
     margin-bottom: 1rem;
     background-color: transparent;
 }
+
 .article-body table th,
 .article-body table td {
-    padding:2px 15px;
+    padding: 2px 15px;
     border: 1px solid #95a5a6;
 }
+
 .article-body table th {
-    background-color:#212529;
-    color:#fff;
+    background-color: #212529;
+    color: #fff;
 }
+
 .article-body a {
     color: #ea6f5a;
 }
+
 .article-body a:hover {
     color: #17a2b8;
 }
+
+/*设置文章导航*/
+.toc-block {
+    padding-top: 3rem;
+}
 .article-toc {
     position: fixed;
-    max-width: 20%;
+    max-width: 18%;
+    border-left: 1px solid #10b981;
 }
-/*
-.toc ul {
-    padding-left:2em;
+
+.article-toc .toc-title {
+    margin-left: 1rem;
+    color: #10b981;
 }
-.toc >ul > li {
-    list-style-type: upper-roman;
-    line-height: 1.8em;
-    color: #0099ff;
+
+.article-toc ul {
+    padding-left: 1rem;
+    list-style-type: none;
 }
-.toc > ul > li > ul > li {
-    list-style-type: decimal;
+
+.article-toc li {
+    margin-top: .3em;
+    margin-bottom: .3em;
 }
-*/
+
+.toc a {
+    color: rgb(0, 153, 255);
+}
+
 .toc a:hover {
-    color: #ff6900;
+    color: #ff6900!important;
 }
+
 
 blockquote {
     margin: 0 0 .5em;
 }
+
 pre {
     line-height: 1.5;
-    overflow-:auto;
+    overflow-: auto;
 }
+
 /* pre next blog */
 .more-blog {
     text-align: center;
@@ -89,29 +117,33 @@ pre {
     z-index: 88;
     color: #ccc;
 }
+
 .more-blog a {
     padding: 5rem 1rem;
 }
+
 #icon-pre-blog {
     left: 2%;
 }
+
 #icon-next-blog {
     right: 2%;
 }
+
 /* Small devices (landscape phones, 576px and up) */
 /* X-iPhone6 AND plus */
 @media (min-width: 576px) {
-.f-17 {
-    font-size: 15px;
-}
+    .f-17 {
+        font-size: 15px;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
 /* Y-iPad mini */
 @media (min-width: 768px) {
-.f-17 {
-    font-size: 16px;
-}
+    .f-17 {
+        font-size: 16px;
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
