--- a/apps/oauth/templates/oauth/tags/user_avatar.html
+++ b/apps/oauth/templates/oauth/tags/user_avatar.html
@@ -1,10 +1,10 @@
 {% load oauth_tags %}
 {% if user.socialaccount_set.exists and user.avatar.url == '/media/avatar/default.png' %}
     {% if ".sinaimg.cn" in user.socialaccount_set.all.0.get_avatar_url %}
-        <img class="avatar" src="{{ user.avatar.url }}" alt="{{ user }}">
+        <img class="avatar" src="{{ user.get_avatar_or_default_url }}" alt="{{ user }}">
     {% else %}
         <img class="avatar" src="{% http_to_https user.socialaccount_set.all.0.get_avatar_url %}" alt="{{ user }}">
     {% endif %}
 {% else %}
-<img class="avatar" src="{{ user.avatar.url }}" alt="{{ user }}">
+<img class="avatar" src="{{ user.get_avatar_or_default_url }}" alt="{{ user }}">
 {% endif %}
