--- a/apps/blog/static/blog/css/monokai.css
+++ b/apps/blog/static/blog/css/monokai.css
@@ -5,7 +5,7 @@
 }
 
 .codehilite .hll { background-color: #49483e }
-.codehilite  { background: #272822; color: #f8f8f2 }
+.codehilite  { background: #272822; color: #f8f8f2; border-radius: 8px;}
 .codehilite .c { color: #75715e } /* Comment */
 .codehilite .err { color: #960050; background-color: #1e0010 } /* Error */
 .codehilite .k { color: #66d9ef } /* Keyword */
