--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -14,7 +14,7 @@
         <link href="https://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.css" rel="stylesheet">
     {% endif %}
     <link href="{% static 'blog/css/detail.css' %}?v=20230419.10" rel="stylesheet">
-    <link href="{% static 'blog/css/monokai.css' %}?v=20190910.2" rel="stylesheet">
+    <link href="{% static 'blog/css/monokai.css' %}?v=20230423.5" rel="stylesheet">
     <link href="{% static 'comment/css/base_comment.css' %}?v=20190114.554" rel="stylesheet">
 {% endblock %}
 
@@ -130,6 +130,7 @@
 {% endblock %}
 
 {% block end_file %}
+    <script src="{% static 'blog/js/code.js' %}?v=20230424.010"></script>
     {% if user.is_authenticated %}
         <script src="https://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.js"></script>
         <script src="{% static 'comment/js/editor.js' %}?v=20190311.05908"></script>
