文章代码添加复制按钮

--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -113,7 +113,7 @@ pre {
 /*复制代码*/
 .code-wrapper {
     border-radius: 8px 8px 0 0;
-    background-color: #343540;
+    background-color: #3c3f41;
     padding-left: 68%;
 }
 
