--- a/apps/blog/static/blog/css/monokai.css
+++ b/apps/blog/static/blog/css/monokai.css
@@ -4,8 +4,8 @@
     color: #d4d7da;
 }
 
+.codehilite  { background: #2b2b2b; color: #f8f8f2; border-radius: 8px;}
 .codehilite .hll { background-color: #49483e }
-.codehilite  { background: #272822; color: #f8f8f2; border-radius: 8px;}
 .codehilite .c { color: #75715e } /* Comment */
 .codehilite .err { color: #960050; background-color: #1e0010 } /* Error */
 .codehilite .k { color: #66d9ef } /* Keyword */
